--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ env:
     - GO111MODULE=on
 before_install:
   - go get -u github.com/client9/misspell/cmd/misspell
-  - go get -u golang.org/x/lint/golint
+  # - go get -u golang.org/x/lint/golint
   - go get honnef.co/go/tools/cmd/staticcheck
 before_script:
   - GOFILES=$(find . -type f -name '*.go' | grep -v vendor)
@@ -28,5 +28,5 @@ script:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then test -z $(gofmt -s -l $GOFILES); fi
   - go test ./... -race
   - misspell -error -locale US $GOFILES
-  - golint -set_exit_status $GOFILES
+  # - golint -set_exit_status $GOFILES
   - staticcheck ./...
